Interpret some stuff.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -280,6 +280,26 @@
   publisher={Oxford University Press}
 }
 
+@article{sambridge2013transdimensional,
+  title={Transdimensional inference in the geosciences},
+  author={Sambridge, Malcolm and Bodin, Thomas and Gallagher, Kerry and Tkal{\v{c}}i{\'c}, H},
+  journal={Phil. Trans. R. Soc. A},
+  volume={371},
+  number={1984},
+  pages={20110547},
+  year={2013},
+  publisher={The Royal Society}
+}
+
+@article{minson2013bayesian,
+  title={Bayesian inversion for finite fault earthquake source models I—theory and algorithm},
+  author={Minson, SE and Simons, M and Beck, JL},
+  journal={Geophysical Journal International},
+  pages={ggt180},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
 @article{tarling1996palaeomagnetic,
   title={Palaeomagnetic-pole errors and a ‘small-circle’assessment of the Gondwanan polar-wander path},
   author={Tarling, DH and Abdeldayem, AL},
@@ -424,17 +444,6 @@
   publisher={Elsevier}
 }
 
-@article{sambridge2013transdimensional,
-  title={Transdimensional inference in the geosciences},
-  author={Sambridge, Malcolm and Bodin, Thomas and Gallagher, Kerry and Tkal{\v{c}}i{\'c}, H},
-  journal={Phil. Trans. R. Soc. A},
-  volume={371},
-  number={1984},
-  pages={20110547},
-  year={2013},
-  publisher={The Royal Society}
-}
-
 @article{torsvik1992baltica,
   title={Baltica. A synopsis of Vendian-Permian palaeomagnetic data and their palaeotectonic implications},
   author={Torsvik, Trond H and Smethurst, Mark A and Van der Voo, Rob and Trench, Allan and Abrahamsen, Niels and Halvorsen, Erik},
@@ -444,6 +453,28 @@
   pages={133--152},
   year={1992},
   publisher={Elsevier}
+}
+
+@article{tarduno1990fast,
+  title={Fast instantaneous oceanic plate velocities recorded by the Cretaceous Laytonville Limestone: Paleomagnetic analysis and kinematic implications},
+  author={Tarduno, John A and McWillams, Michael and Sleep, Norman},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={95},
+  number={B10},
+  pages={15503--15527},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{davis1997geochronology,
+  title={Geochronology of the North American Midcontinent rift in western Lake Superior and implications for its geodynamic evolution},
+  author={Davis, DW and Green, JC},
+  journal={Canadian Journal of Earth Sciences},
+  volume={34},
+  number={4},
+  pages={476--488},
+  year={1997},
+  publisher={NRC Research Press}
 }
 
 @article{torsvik2008global,
