Work on data table.

--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -20,15 +20,24 @@
     publisher={Wiley Online Library}
 }
 
-@article{swanson2015new,
-  title={A new grand mean palaeomagnetic pole for the 1.11 Ga Umkondo large igneous province with implications for palaeogeography and the geomagnetic field},
-  author={Swanson-Hysell, NL and Kilian, TM and Hanson, RE},
-  journal={Geophysical Journal International},
-  volume={203},
-  number={3},
-  pages={2237--2247},
-  year={2015},
-  publisher={Oxford University Press}
+@article{halls1974paleomagnetic,
+   title={A paleomagnetic reversal in the Osler Volcanic Group, northern Lake Superior},
+   author={Halls, H.},
+   year={1974},
+   journal={Canadian Journal of Earth Sciences},
+   volume={11},
+   pages={1200-1207}
+}
+
+@article{swanson2014confirmation,
+  title={Confirmation of progressive plate motion during the Midcontinent Rift's early magmatic stage from the Osler Volcanic Group, Ontario, Canada},
+  author={Swanson-Hysell, Nicholas L and Vaughan, Angus A and Mustain, Monica R and Asp, Kristofer E},
+  journal={Geochemistry, Geophysics, Geosystems},
+  volume={15},
+  number={5},
+  pages={2039--2047},
+  year={2014},
+  publisher={Wiley Online Library}
 }
 
 @article{argus2011geologically,
@@ -466,6 +475,21 @@
   publisher={Wiley Online Library}
 }
 
+@book{gelman2014bayesian,
+  title={Bayesian data analysis},
+  author={Gelman, Andrew and Carlin, John B and Stern, Hal S and Rubin, Donald B},
+  volume={2},
+  year={2014},
+  publisher={Chapman \& Hall/CRC Boca Raton, FL, USA}
+}
+
+@book{sivia2006data,
+  title={Data analysis: a Bayesian tutorial},
+  author={Sivia, Devinderjit and Skilling, John},
+  year={2006},
+  publisher={OUP Oxford}
+}
+
 @article{davis1997geochronology,
   title={Geochronology of the North American Midcontinent rift in western Lake Superior and implications for its geodynamic evolution},
   author={Davis, DW and Green, JC},
@@ -474,6 +498,17 @@
   number={4},
   pages={476--488},
   year={1997},
+  publisher={NRC Research Press}
+}
+
+@article{ernst1993paleomagnetism,
+  title={Paleomagnetism of the Abitibi dyke swarm, southern Superior Province, and implications for the Logan Loop},
+  author={Ernst, Richard E and Buchan, Kenneth L},
+  journal={Canadian Journal of Earth Sciences},
+  volume={30},
+  number={9},
+  pages={1886--1897},
+  year={1993},
   publisher={NRC Research Press}
 }
 
@@ -515,12 +550,121 @@
     Year = {1996}
 }
 
+@inproceedings{fairchild2015did,
+  title={When Did Midcontinent Rift Volcanism End and Where Was Laurentia at that Time?},
+  author={Fairchild, Luke},
+  booktitle={2015 AGU Fall Meeting},
+  year={2015},
+  organization={Agu}
+}
+
+@article{henry1977paleomagnetism,
+  title={Paleomagnetism of the upper Keweenawan sediments: the Nonesuch Shale and Freda Sandstone},
+  author={Henry, Steven G and Mauk, Frederick J and der Voo, Rob Van},
+  journal={Canadian Journal of Earth Sciences},
+  volume={14},
+  number={5},
+  pages={1128--1138},
+  year={1977},
+  publisher={NRC Research Press}
+}
+
+@article{swanson2014magmatic,
+  title={Magmatic activity and plate motion during the latent stage of Midcontinent Rift development},
+  author={Swanson-Hysell, Nicholas L and Burgess, Seth D and Maloof, Adam C and Bowring, Samuel A},
+  journal={Geology},
+  volume={42},
+  number={6},
+  pages={475--478},
+  year={2014},
+  publisher={Geological Society of America}
+}
+
+@article{warnock2000using,
+  title={Using thermochronometry and low-temperature demagnetization to accurately date Precambrian paleomagnetic poles},
+  author={Warnock, Andrew C and Kodama, Kenneth P and Zeitler, Peter K},
+  journal={Journal of Geophysical Research: Solid Earth},
+  volume={105},
+  number={B8},
+  pages={19435--19453},
+  year={2000},
+  publisher={Wiley Online Library}
+}
+
+@article{palmer1987paleomagnetism,
+  title={Paleomagnetism and U Pb geochronology of volcanic rocks from Michipicoten Island, Lake Superior, Canada: precise calibration of the Keweenawan polar wander track},
+  author={Palmer, HC and Davis, DW},
+  journal={Precambrian Research},
+  volume={37},
+  number={2},
+  pages={157--171},
+  year={1987},
+  publisher={Elsevier}
+}
+
+@article{kulakov2013paleomagnetism,
+  title={Paleomagnetism of~ 1.09 Ga Lake Shore Traps (Keweenaw Peninsula, Michigan): new results and implications},
+  author={Kulakov, Evgeniy V and Smirnov, Aleksey V and Diehl, Jimmy F},
+  journal={Canadian Journal of Earth Sciences},
+  volume={50},
+  number={11},
+  pages={1085--1096},
+  year={2013},
+  publisher={NRC Research Press}
+}
+
+@article{diehl1994paleomagnetic,
+  title={A paleomagnetic study of the lava flows within the Copper Harbor Conglomerate, Michigan: new results and implications},
+  author={Diehl, JF and Haig, TD},
+  journal={Canadian Journal of Earth Sciences},
+  volume={31},
+  number={2},
+  pages={369--380},
+  year={1994},
+  publisher={NRC Research Press}
+}
+
+@article{hnat2006primary,
+  title={Primary curvature in the Mid-Continent Rift: Paleomagnetism of the Portage Lake Volcanics (northern Michigan, USA)},
+  author={Hnat, James S and Van der Pluijm, Ben A and Van der Voo, Rob},
+  journal={Tectonophysics},
+  volume={425},
+  number={1},
+  pages={71--82},
+  year={2006},
+  publisher={Elsevier}
+}
+
 @book{butler1992paleomagnetism,
   title={Paleomagnetism: magnetic domains to geologic terranes},
   author={Butler, Robert F},
   volume={319},
   year={1992},
   publisher={Blackwell Scientific Publications Boston}
+}
+@techreport{books1968magnetization,
+  title={Magnetization of the lowermost Keweenawan lava flows in the Lake Superior area},
+  author={Books, Kenneth G},
+  year={1968},
+  institution={United States Geological Survey}
+}
+
+@techreport{books1972paleomagnetism,
+  title={Paleomagnetism of some Lake Superior Keweenawan rocks},
+  author={Books, Kenneth G},
+  year={1972},
+  institution={US Govt. Print. Off.,}
+}
+
+@article{tauxe2009paleosecular,
+  title={Paleosecular variation models for ancient times: Clues from Keweenawan lava flows},
+  author={Tauxe, Lisa and Kodama, Kenneth P},
+  journal={Physics of the Earth and Planetary Interiors},
+  volume={177},
+  number={1},
+  pages={31--45},
+  year={2009},
+  publisher={Elsevier}
 }
 
 @book{tauxe2009essentials,
