--- a/bayesian_plate_reconstruction.bib
+++ b/bayesian_plate_reconstruction.bib
@@ -483,6 +483,45 @@
   publisher={Chapman \& Hall/CRC Boca Raton, FL, USA}
 }
 
+@article{gelman1996markov,
+  title={Markov chain Monte Carlo methods in biostatistics},
+  author={Gelman, Andrew and Rubin, Donald B},
+  journal={Statistical Methods in Medical Research},
+  volume={5},
+  number={4},
+  pages={339--355},
+  year={1996},
+  publisher={SAGE Publications}
+}
+
+@article{lunn2000winbugs,
+  title={WinBUGS-a Bayesian modelling framework: concepts, structure, and extensibility},
+  author={Lunn, David J and Thomas, Andrew and Best, Nicky and Spiegelhalter, David},
+  journal={Statistics and computing},
+  volume={10},
+  number={4},
+  pages={325--337},
+  year={2000},
+  publisher={Springer}
+}
+
+@article{carpenter2016stan,
+  title={Stan: A probabilistic programming language},
+  author={Carpenter, Bob and Gelman, Andrew and Hoffman, Matt and Lee, Daniel and Goodrich, Ben and Betancourt, Michael and Brubaker, Michael A and Guo, Jiqiang and Li, Peter and Riddell, Allen},
+  journal={J Stat Softw},
+  year={2016}
+}
+
+@book{davidson2015bayesian,
+ author = {Davidson-Pilon, Cameron},
+ title = {Bayesian Methods for Hackers: Probabilistic Programming and Bayesian Inference},
+ year = {2015},
+ isbn = {0133902838, 9780133902839},
+ edition = {1st},
+ publisher = {Addison-Wesley Professional},
+} 
+
+
 @book{sivia2006data,
   title={Data analysis: a Bayesian tutorial},
   author={Sivia, Devinderjit and Skilling, John},
